buildscript {
	ext {
		springBootVersion = '3.0.0'
		springDependencyManagementVersion = '1.1.0'
		lombokVersion = '1.18.24'
		logCaptorVersion = '2.7.10'
	}
}

plugins {
	id 'java'
	id ("org.springframework.boot") version "${springBootVersion}"
	id("io.spring.dependency-management") version "${springDependencyManagementVersion}"
}

group = 'Composition'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

dependencies {
	implementation ("org.springframework.boot:spring-boot-starter:${springBootVersion}")
	testImplementation("org.springframework.boot:spring-boot-starter-test:${springBootVersion}")
	compileOnly ("org.projectlombok:lombok:${lombokVersion}")
	annotationProcessor  ("org.projectlombok:lombok:${lombokVersion}")
	testImplementation ("io.github.hakky54:logcaptor:${logCaptorVersion}")

}

tasks.named('test') {
	useJUnitPlatform()
}
